--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ asyncio
 ffmpeg-python
 py-tgcalls==0.8.1
 pyrogram==1.4.12
-git+https://github.com/S780821/yt-dlp@master
+git+https://github.com/yt-dlp@master
 youtube-search-python==1.4.9
 youtube-search
 python-dotenv
